--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,29 @@
 #
 --index-url https://artifactory.lyft.net/artifactory/api/pypi/virtual-pypi-lyft/simple/
 
+attrs==22.1.0
+    # via pytest
 certifi==2022.12.7
     # via requests
 charset-normalizer==2.1.1
     # via requests
+exceptiongroup==1.0.4
+    # via pytest
 idna==3.4
     # via requests
+iniconfig==1.1.1
+    # via pytest
 packaging==22.0
+    # via
+    #   -r requirements.in
+    #   pytest
+pluggy==1.0.0
+    # via pytest
+pytest==7.2.0
     # via -r requirements.in
 requests==2.28.1
     # via -r requirements.in
+tomli==2.0.1
+    # via pytest
 urllib3==1.26.13
     # via requests
