--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,7 @@ packages = find:
 [options.entry_points]
 console_scripts =
     pipfreeze2nix = pipfreeze2nix:realmain
+
+[flake8]
+extend-ignore = E203
+max-line-length=120
