--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile
 #
---index-url https://artifactory.lyft.net/artifactory/api/pypi/virtual-pypi-lyft/simple/
+--index-url https://pypi.org/simple/
 
 attrs==22.1.0
     # via pytest
